# serializer version: 1
# name: test_climate_snapshot[climate.test_thermostat_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 12,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.test_thermostat_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'homee',
    'unique_id': '00055511EECC-1-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Thermostat 1',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.HEATING: 'heating'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 12,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 20.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.test_thermostat_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.test_thermostat_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'homee',
    'unique_id': '00055511EECC-2-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 19.6,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Thermostat 2',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.HEATING: 'heating'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 22.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.test_thermostat_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 25,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 14,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.test_thermostat_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': 'homee',
    'unique_id': '00055511EECC-3-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 19.6,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Thermostat 3',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.HEATING: 'heating'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 25,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 14,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 24.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.test_thermostat_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 32,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 10,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'boost',
        'manual',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.test_thermostat_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'homee',
    'unique_id': '00055511EECC-4-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 19.6,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Thermostat 4',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 32,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 10,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'boost',
        'manual',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 12.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.test_thermostat_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 32,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 10,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.test_thermostat_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'homee',
    'unique_id': '00055511EECC-5-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 19.6,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Thermostat 5',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 32,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 10,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 12.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.test_thermostat_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
